--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url("./background-image.jpg") center center no-repeat;
+  background: url("./tobias-rademacher-x5j7rgp2cmg-unsplash.jpg") center center no-repeat;
   background-size: cover;
 }
 
@@ -32,7 +32,7 @@ body {
   text-align: center;
   padding: 40px 20px;
   border-radius: 15px;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(20px);
   box-shadow: 4px 4px 13px 5px rgba(0, 0, 0, 0.25);
 }
 @media only screen and (max-width: 700px) {
